<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="done">Done</string>
    <string name="application_name">Legacy Launcher</string>
    <string name="app_version">0.33 Beta</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="activity_not_found">Failed to launch the application requested. Maybe it is not installed on your phone.</string>
    <string name="activity_security_exception">Failed to launch the application requested. Access was denied.</string>
    <string name="configure_wallpaper">Configure\u2026</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="launcher_actions">Launcher Actions</string>
    <string name="group_search">Search</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="out_of_space">No more room on current desktop screen.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Widget not loaded</string>
    <string name="launcher_label_settings">Legacy Launcher Setup</string>
    <string name="pref_title_desktop">Desktop</string>
    <string name="pref_title_desktop_config_preferences">Desktop Configuration</string>
    <string name="pref_summary_desktop_config_preferences">Layout, response</string>
    <string name="pref_title_desktop_extended_preferences">Desktop Extensions</string>
    <string name="pref_summary_desktop_extended_preferences">Desktop previews, folders</string>
    <string name="pref_title_desktop_appearance_preferences">Desktop Appearance</string>
    <string name="pref_summary_desktop__preferences">Transitions, indicators, icons</string>
    <string name="pref_title_desktop_icon_widget_preferences">Desktop Icons and Widgets</string>
    <string name="pref_summary_desktop_icon_widget_preferences">Customize icons and widgets, labels</string>
    <string name="pref_title_wallpaper_hack">Wallpaper Hack</string>
    <string name="pref_summary_wallpaper_hack">Turn off if launcher becomes unstable. Enabling improves scrolling speed.</string>
    <string name="pref_title_orientation_sensor">Launcher Orientation</string>
    <string name="pref_title_hide_statusbar">Hide StatusBar</string>
    <string name="pref_summary_hide_statusbar">Hides the statusbar</string>
    <string name="pref_title_looping">Screen Loop</string>
    <string name="pref_summary_looping">Screen looping (has visual side-effects)</string>
    <string name="pref_title_default_screen">Default screen set</string>
    <string name="pref_title_desktop_scrolling_speed">Scrolling time</string>
    <string name="pref_summary_desktop_scrolling_speed">Time to scroll across</string>
    <string name="pref_dialog_desktop_scrolling_speed">The lower the value, the faster flings will be</string>
    <string name="pref_title_desktop_overshoot">Scroll overshoot bounce</string>
    <string name="pref_summary_desktop_overshoot">Screen scroll bounce amount</string>
    <string name="pref_dialog_desktop_overshoot">Set to 0 to turn off scroll overshoot</string>
    <string name="pref_title_desktop_snap">Scroll snap time</string>
    <string name="pref_summary_desktop_snap">Time to snap to screen when scroll ends</string>
    <string name="pref_dialog_desktop_snap">Speed up snap time by decreasing value</string>
    <string name="pref_title_desktop_transition">Transition Animation</string>
    <string name="pref_summary_desktop_transition">Transistion animation for changing screens</string>
    <string name="pref_title_desktop_wallpaper">Wallpaper</string>
    <string name="pref_title_enable_previews">Desktop previews</string>
    <string name="pref_summary_enable_previews">Enable desktop previews</string>
    <string name="pref_title_spread_previews">Spread previews</string>
    <string name="pref_summary_spread_previews">Apply the spread style desktop preview style</string>
    <string name="pref_title_desktop_label_size">Text size</string>
    <string name="pref_summary_desktop_label_size">Select text size for labels</string>
    <string name="pref_dialog_desktop_label_size">Select text size for labels</string>
    <string name="pref_title_desktop_label_padding_override">Override padding</string>
    <string name="pref_summary_desktop_label_padding_override">Select to override label padding</string>
    <string name="pref_title_desktop_label_padding_radius_size">Background radius</string>
    <string name="pref_summary_desktop_label_padding_radius_size">Label background corner radius</string>
    <string name="pref_dialog_desktop_label_padding_radius_size">Label background corner radius</string>
    <string name="pref_title_desktop_label_padding_horizontal">Horizontal padding</string>
    <string name="pref_summary_desktop_label_padding_horizontal">Label background horizontal padding</string>
    <string name="pref_dialog_desktop_label_padding_horizontal">Label background horizontal padding</string>
    <string name="pref_title_desktop_label_padding_vertical">Vertical padding</string>
    <string name="pref_summary_desktop_label_padding_vertical">Label background vertical padding</string>
    <string name="pref_dialog_desktop_label_padding_vertical">Label background vertical padding</string>
    <string name="pref_title_desktop_label_color_category">Icon Label Colors</string>
    <string name="pref_title_desktop_label_color_override">Override colors</string>
    <string name="pref_summary_desktop_label_color_override">Select to override label colors</string>
    <string name="pref_title_desktop_label_color_shadow">Text shadow color</string>
    <string name="pref_summary_desktop_label_color_shadow">Label text shadow color</string>
    <string name="pref_title_desktop_label_color_text">Text color</string>
    <string name="pref_summary_desktop_label_color_text">Select text color of labels</string>
    <string name="pref_title_desktop_label_bold_text">Text bold</string>
    <string name="pref_summary_desktop_label_bold_text">Select text bold style of labels</string>
    <string name="pref_title_desktop_label_color_bg">Label background color</string>
    <string name="pref_summary_desktop_label_color_bg">Select background color of labels</string>
    <string name="pref_title_desktop_icon_label_category">Icon Labels</string>
    <string name="pref_title_desktop_icon_label_padding_category">Icon Label Background Padding</string>
    <string name="pref_title_folder">Folders</string>
    <string name="pref_title_closing_folder">Auto-close folders</string>
    <string name="pref_summary_closing_folder">Auto-close folder after app launch</string>
    <string name="pref_title_folder_text_size">Folder text size</string>
    <string name="pref_summary_folder_text_size">Set folder text size</string>
    <string name="pref_dialog_folder_text_size">Set folder text size</string>
    <string name="pref_title_folder_animate">Animate folders</string>
    <string name="pref_summary_folder_animate">Set folder open/close animations</string>
    <string name="pref_title_desktop_actions">Desktop Actions</string>
    <string name="pref_summary_desktop_actions">Home button, swipe, and double-tap actions</string>
    <string name="pref_title_home_button_binding">Home button</string>
    <string name="pref_title_swipedown_actions">Swipe down</string>
    <string name="pref_title_swipeup_actions">Swipe up</string>
    <string name="pref_title_doubletap_actions">Double-tap</string>
    <string name="pref_title_drawer">Applications Tray</string>
    <string name="pref_title_drawer_settings">Tray Configuration</string>
    <string name="pref_summary_drawer_settings">Style, layout, response</string>
    <string name="pref_title_drawer_appearance">Tray Appearance</string>
    <string name="pref_summary_drawer_appearance">Visual settings</string>
    <string name="pref_title_drawer_catalogs">Tray Catalogs</string>
    <string name="pref_summary_drawer_catalogs">Catalogs preferences</string>
    <string name="pref_title_drawer_animation_speed">Animation duration</string>
    <string name="pref_summary_drawer_animation_speed">Set animation time in milliseconds </string>
    <string name="pref_dialog_animation_speed">Set animation time in milliseconds</string>
    <string name="pref_title_page_horizontal_margin">Horizontal tray margin</string>
    <string name="pref_summary_page_horizontal_margin">Side margin width of horizontal tray</string>
    <string name="pref_dialog_page_horizontal_margin">Side margin width of horizontal tray</string>
    <string name="pref_title_animated_drawer">Animated tray</string>
    <string name="pref_summary_animated_drawer">Display animations</string>
    <string name="pref_title_animated_zoom_drawer">Animate zoom</string>
    <string name="pref_summary_animated_zoom_drawer">Zoom animation</string>
    <string name="pref_title_drawer_columns_portrait">Portrait columns</string>
    <string name="pref_summary_drawer_columns_portrait">Number of columns in portrait</string>
    <string name="pref_dialog_drawer_columns_portrait">Number of columns in portrait</string>
    <string name="pref_title_drawer_rows_portrait">Portrait rows</string>
    <string name="pref_summary_drawer_rows_portrait">Number of rows in portrait</string>
    <string name="pref_dialog_drawer_rows_portrait">Number of rows in portrait</string>
    <string name="pref_title_drawer_columns_landscape">Landscape columns</string>
    <string name="pref_summary_drawer_columns_landscape">Number of columns in landscape</string>
    <string name="pref_dialog_drawer_columns_landscape">Number of columns in landscape</string>
    <string name="pref_title_drawer_rows_landscape">Landscape rows</string>
    <string name="pref_summary_drawer_rows_landscape">Number of rows in landscape</string>
    <string name="pref_dialog_drawer_rows_landscape">Number of rows in landscape</string>
    <string name="shortcut_header">Select desired application activity to launch.\nOptionally select a custom icon.</string>
    <string name="shortcut_pick_activity">Pick an activity</string>
    <string name="shortcut_label">Label</string>
    <string name="selectAll">Select all</string>
    <string name="sortType">Sort by\:</string>
</resources>